--- a/davidgwong.github.io/package.json
+++ b/davidgwong.github.io/package.json
@@ -13,6 +13,7 @@
     "@mantine/carousel": "^7.2.2",
     "@mantine/core": "^7.2.2",
     "@mantine/hooks": "^7.2.2",
+    "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
